Fix Bookmarks Bar Drag-and-Drop between folders

Currently you cannot drag between two bookmarks folders on Linux and Windows.
Widget destruction on those platforms tears down their platform specific
drag-and-drop implementations.

This change updates MenuController to not tear down when Cancel is called if
a drag is currently occurring. The menu will still have all windows hidden, and
will be destroyed when drag-and-drop completes.

There are interactive_ui_tests covering the integration tests of this feature
in BookmarkBarViewTest. However they are disabled on Windows and Linux, missing
the bug at submission time. I've filed crbug.com/656712 to track the issues
with X11 preventing getting these tests running.

TEST=MenuControllerTest.CancelAllDuringDrag, manual testing on Linux and Windows
BUG=636397

Review-Url: https://codereview.chromium.org/2422283002
Cr-Commit-Position: refs/heads/master@{#425790}

Former-commit-id: 24470df35ac9d98824f447d9a0112c0bdbdf1cb5